NOSONAR for classes that are not test classes